<resources>
    <string name="app_name">Whatmovie</string>
    <string name="movie_cover">Movie Cover</string>
    <string name="storyline">Storyline:</string>
    <string name="in_theaters">In Theaters</string>
    <string name="popular_movies"> Popular Movies</string>
    <string name="recommended_movies">Recommended Movies</string>
    <string name="the_cast">The Cast</string>
    <string name="about_film">About Film</string>
    <string name="original_title">Original Title:</string>
    <string name="type">Type:</string>
    <string name="language">Language:</string>
    <string name="production">Production:</string>
    <string name="premiere">Premiere:</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="actor_image_transition">actor_image_transition</string>
    <string name="label">Label</string>
    <string name="heart_stroke_left">M28.7194825,38.2960196 L25.6688233,35.5523072 C21.6213379,31.793335 18.0159912,28.8906251 18.0159912,24.845337 C18.0159912,21.5882568 20.6305373,19.9651315 23.6337891,19.9651442 C24.9985352,19.96515 26.7993165,21.180664 28.643982,23.1297608</string>
    <string name="heart_stroke_right">M27.2310342,38.2944327 L30.7645263,35.2004395 C34.8336142,31.2354829 37.751709,29.1181308 38.0040283,25.0838624 C38.1681943,22.4590544 35.7730552,20.034668 33.3791503,20.034668 C30.4320068,20.034668 29.671997,21.0472412 27.2310342,23.1328126</string>
    <string name="heart_full_path">M28,39 L26.405,37.5667575 C20.74,32.4713896 17,29.1089918 17,24.9945504 C17,21.6321526 19.6565,19 23.05,19 C24.964,19 26.801,19.8828338 28,21.2724796 C29.199,19.8828338 31.036,19 32.95,19 C36.3435,19 39,21.6321526 39,24.9945504 C39,29.1089918 35.26,32.4713896 29.595,37.5667575 L28,39 L28,39 Z</string>
    <string name="heart_clip_hidden">M18 37 L38 37 L38 37 L18 37 Z</string>
    <string name="heart_clip_shown">M0 0 L56 0 L56 56 L0 56 Z</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>

    <!-- NAV ICONS -->
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
</resources>
