<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="detail"
                type="com.matteopasotti.whatmovie.model.MovieDetailDomainModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/about_movie_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/product_sans_bold"
                android:text="@string/about_film"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/original_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/product_sans_bold"
                android:text="@string/original_title"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/about_movie_label"
                app:layout_constraintTop_toBottomOf="@+id/about_movie_label" />

        <TextView
                android:id="@+id/original_title_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:ellipsize="end"
                android:fontFamily="@font/product_sans_bold"
                android:maxLines="3"
                android:text="@{detail.originalTitle}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/original_title_label"
                app:layout_constraintTop_toTopOf="@+id/original_title_label"
                tools:text="Movie Title" />

        <TextView
                android:id="@+id/type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/product_sans_bold"
                android:text="@string/type"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/about_movie_label"
                app:layout_constraintTop_toBottomOf="@+id/original_title_txt" />

        <TextView
                android:id="@+id/type_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/product_sans_bold"
                android:maxLines="3"
                android:text="@{detail.type}"
                tools:text="Adventure, Thriller, Fantasy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/original_title_txt"
                app:layout_constraintTop_toTopOf="@+id/type_label"/>

        <TextView
                android:id="@+id/language_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/product_sans_bold"
                android:text="@string/language"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/about_movie_label"
                app:layout_constraintTop_toBottomOf="@+id/type_txt" />

        <TextView
                android:id="@+id/language_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/product_sans_bold"
                android:maxLines="1"
                android:text="@{detail.language}"
                tools:text="en"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/original_title_txt"
                app:layout_constraintTop_toTopOf="@+id/language_label"/>

        <TextView
                android:id="@+id/production_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/product_sans_bold"
                android:text="@string/production"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/about_movie_label"
                app:layout_constraintTop_toBottomOf="@+id/language_txt" />

        <TextView
                android:id="@+id/production_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/product_sans_bold"
                android:maxLines="3"
                android:text="@{detail.productionCountries}"
                tools:text="United Kingdom, Italy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/original_title_txt"
                app:layout_constraintTop_toTopOf="@+id/production_label"/>

        <TextView
                android:id="@+id/premiere_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/product_sans_bold"
                android:text="@string/premiere"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/about_movie_label"
                app:layout_constraintTop_toBottomOf="@+id/production_label" />

        <TextView
                android:id="@+id/premiere_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/product_sans_bold"
                android:maxLines="1"
                android:text="@{detail.releaseDate}"
                tools:text="28/10/2001"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/original_title_txt"
                app:layout_constraintTop_toTopOf="@+id/premiere_label"/>

        <TextView
                android:id="@+id/storyline_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/product_sans_bold"
                android:text="@string/storyline"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/about_movie_label"
                app:layout_constraintTop_toBottomOf="@+id/premiere_txt" />

        <TextView
                android:id="@+id/storyline_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:fontFamily="@font/product_sans_bold"
                android:text="@{detail.overview}"
                android:layout_marginEnd="@dimen/margin_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/original_title_label"
                app:layout_constraintTop_toTopOf="@+id/storyline_label"
                tools:text="Storyline text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>